[gd_scene load_steps=17 format=3 uid="uid://cjmdbqh07yxo5"]

[ext_resource type="Texture2D" uid="uid://crf0ityvr1prf" path="res://textures/triggers/button_01.tres" id="1_3jk6a"]
[ext_resource type="Script" path="res://scripts/triggers/button_01.gd" id="1_jrxe6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_41lwk"]
atlas = ExtResource("1_3jk6a")
region = Rect2(256, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_15wyd"]
atlas = ExtResource("1_3jk6a")
region = Rect2(192, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_numia"]
atlas = ExtResource("1_3jk6a")
region = Rect2(128, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ihq6i"]
atlas = ExtResource("1_3jk6a")
region = Rect2(64, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_k8ryl"]
atlas = ExtResource("1_3jk6a")
region = Rect2(0, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t06mb"]
atlas = ExtResource("1_3jk6a")
region = Rect2(0, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_l2015"]
atlas = ExtResource("1_3jk6a")
region = Rect2(256, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vqp67"]
atlas = ExtResource("1_3jk6a")
region = Rect2(0, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2my0u"]
atlas = ExtResource("1_3jk6a")
region = Rect2(64, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dj6rb"]
atlas = ExtResource("1_3jk6a")
region = Rect2(128, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jeqob"]
atlas = ExtResource("1_3jk6a")
region = Rect2(192, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_60k7b"]
atlas = ExtResource("1_3jk6a")
region = Rect2(256, 0, 64, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_2stkx"]
animations = [{
"frames": [{
"duration": 0.6,
"texture": SubResource("AtlasTexture_41lwk")
}, {
"duration": 0.6,
"texture": SubResource("AtlasTexture_15wyd")
}, {
"duration": 0.6,
"texture": SubResource("AtlasTexture_numia")
}, {
"duration": 0.6,
"texture": SubResource("AtlasTexture_ihq6i")
}, {
"duration": 0.6,
"texture": SubResource("AtlasTexture_k8ryl")
}],
"loop": false,
"name": &"down_2_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t06mb")
}],
"loop": true,
"name": &"off",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l2015")
}],
"loop": true,
"name": &"on",
"speed": 5.0
}, {
"frames": [{
"duration": 0.6,
"texture": SubResource("AtlasTexture_vqp67")
}, {
"duration": 0.6,
"texture": SubResource("AtlasTexture_2my0u")
}, {
"duration": 0.6,
"texture": SubResource("AtlasTexture_dj6rb")
}, {
"duration": 0.6,
"texture": SubResource("AtlasTexture_jeqob")
}, {
"duration": 0.6,
"texture": SubResource("AtlasTexture_60k7b")
}],
"loop": false,
"name": &"up_2_down",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6i4kb"]
size = Vector2(56, 4.75)

[node name="Button_01" type="StaticBody2D"]
script = ExtResource("1_jrxe6")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_2stkx")
animation = &"up_2_down"
autoplay = "off"

[node name="Collision" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-33, 0, 33, 0, 25, -6, -25, -6)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -5.625)
shape = SubResource("RectangleShape2D_6i4kb")

[connection signal="frame_changed" from="Sprite" to="." method="_on_sprite_frame_changed"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
